adding animation to meal section, adding some styles to de app images, correcting some errors, adding de featured in section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,27 @@
       </div>
     </section>
 
+    <section class="section-feature">
+      <div class="container">
+        <h2 class="heading-featured-in">As featured in</h2>
+        <div class="logos">
+          <img
+            class="featured-img"
+            src="./img/logos/business-insider.png"
+            alt=""
+          />
+          <img class="featured-img" src="./img/logos/forbes.png" alt="" />
+          <img class="featured-img" src="./img/logos/techcrunch.png" alt="" />
+          <img
+            class="featured-img"
+            src="./img/logos/the-new-york-times.png"
+            alt=""
+          />
+          <img class="featured-img" src="./img/logos/usa-today.png" alt="" />
+        </div>
+      </div>
+    </section>
+
     <section class="section-how">
       <div class="container">
         <span class="subheading">HOW IT WORKS</span>
@@ -117,7 +138,7 @@
         <div class="phone-container">
           <img id="app--img" src="./img/app/app-screen-2.png" alt="" />
         </div>
-        <div>
+        <div class="step-text-box">
           <p class="step-text-number">02</p>
           <h3 class="step-title">Approve your weekly meal plan</h3>
           <p class="step-description">
@@ -126,7 +147,7 @@
             own recipes.
           </p>
         </div>
-        <div>
+        <div class="step-text-box">
           <p class="step-text-number">03</p>
           <h3 class="step-title">Receive meals at convenient time</h3>
           <p class="step-description">
@@ -324,7 +345,7 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-              <span>Vegetarian</span>
+              <span>Vegan</span>
             </li>
             <li class="meal-list-text">
               <svg
@@ -341,7 +362,7 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-              <span>Vegetarian</span>
+              <span>Pescatarian</span>
             </li>
             <li class="meal-list-text">
               <svg
@@ -358,7 +379,7 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-              <span>Vegetarian</span>
+              <span>Gluten-free</span>
             </li>
             <li class="meal-list-text">
               <svg
@@ -375,7 +396,7 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-              <span>Vegetarian</span>
+              <span>Lactose-free </span>
             </li>
             <li class="meal-list-text">
               <svg
@@ -392,7 +413,7 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-              <span>Vegetarian</span>
+              <span>Keto</span>
             </li>
             <li class="meal-list-text">
               <svg
@@ -409,7 +430,7 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-              <span>Vegetarian</span>
+              <span>Paleo</span>
             </li>
             <li class="meal-list-text">
               <svg
@@ -426,7 +447,7 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-              <span>Vegetarian</span>
+              <span>Low FODMAP</span>
             </li>
             <li class="meal-list-text">
               <svg
@@ -443,13 +464,19 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-              <span>Vegetarian</span>
+              <span>Kid-friendly</span>
             </li>
           </ul>
         </div>
       </div>
       <div class="center-text">
         <a class="see-all" href="#">See all recipes → </a>
+      </div>
+    </section>
+    <section class="section-testimonial">
+      <div class="contaioner center-text">
+        <span class="subheading">TESTIMONIALS</span>
+        <h2 class="heading-secondary">Once you try it, you can't go back</h2>
       </div>
     </section>
   </body>
