Ading New section

--- a/index.html
+++ b/index.html
@@ -474,9 +474,273 @@
       </div>
     </section>
     <section class="section-testimonial">
-      <div class="contaioner center-text">
-        <span class="subheading">TESTIMONIALS</span>
+      <div class="testimonials-container">
+        <span class="subheading">TESTIMONIALS </span>
         <h2 class="heading-secondary">Once you try it, you can't go back</h2>
+
+        <div class="testimonials">
+          <figure class="testimonial">
+            <img
+              class="testimonial-img"
+              alt="Photo of customer Dave Bryson"
+              src="./img/custumers/dave.jpg"
+            />
+            <blockquote class="testimonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having
+              to order manually! It feels truly magical.
+            </blockquote>
+            <p class="testimonial-name">&mdash; Dave Bryson</p>
+          </figure>
+
+          <figure class="testimonial">
+            <img
+              class="testimonial-img"
+              alt="Photo of customer Ben Hadley"
+              src="./img/custumers/ben.jpg"
+            />
+            <blockquote class="testimonial-text">
+              The AI algorithm is crazy good, it chooses the right meals for me
+              every time. It's amazing not to worry about food anymore!
+            </blockquote>
+            <p class="testimonial-name">&mdash; Ben Hadley</p>
+          </figure>
+
+          <figure class="testimonial">
+            <img
+              class="testimonial-img"
+              alt="Photo of customer Steve Miller"
+              src="./img/custumers/steve.jpg"
+            />
+            <blockquote class="testimonial-text">
+              Omnifood is a life saver! I just started a company, so there's no
+              time for cooking. I couldn't live without my daily meals now!
+            </blockquote>
+            <p class="testimonial-name">&mdash; Steve Miller</p>
+          </figure>
+
+          <figure class="testimonial">
+            <img
+              class="testimonial-img"
+              alt="Photo of customer Hannah Smith"
+              src="./img/custumers/hannah.jpg"
+            />
+            <blockquote class="testimonial-text">
+              I got Omnifood for the whole family, and it frees up so much time!
+              Plus, everything is organic and vegan and without plastic.
+            </blockquote>
+            <p class="testimonial-name">&mdash; Hannah Smith</p>
+          </figure>
+        </div>
+      </div>
+      <div class="gallery">
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-1.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-2.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-3.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-4.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-5.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-6.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-7.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-8.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-9.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-10.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-11.jpg" alt="" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="./img/gallery/gallery-12.jpg" alt="" />
+        </figure>
+      </div>
+    </section>
+    <section class="pricing">
+      <div class="container">
+        <span class="subheading">PRICING</span>
+        <h2 class="heading-secondary">Eating well without breaking the bank</h2>
+      </div>
+      <div class="price-container">
+        <div class="pricing-plan">
+          <h4>STARTER</h4>
+          <div class="price">
+            <span>$</span>
+            <h3>399</h3>
+          </div>
+          <p class="plan-text">per month. That's just $13 per meal!</p>
+          <ul class="meals-list">
+            <li class="pricing-list-text">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="pricing-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 12.75 6 6 9-13.5"
+                />
+              </svg>
+              <span>1 meal per day</span>
+            </li>
+            <li class="pricing-list-text"">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="pricing-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 12.75 6 6 9-13.5"
+                />
+              </svg>
+
+              <span>Order from 11am to 9pm</span>
+            </li>
+            <li class="pricing-list-text">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="pricing-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 12.75 6 6 9-13.5"
+                />
+              </svg>
+              <span>Delivery is free</span>
+            </li>
+            <li class="pricing-list-text">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="pricing-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 12.75 6 6 9-13.5"
+                />
+              </svg>
+            </li>
+          </ul>
+          <div class="btn-box">
+            <a href="#" class="btn-start orange">Start eatin well</a>
+            
+          </div>
+        </div>
+        <div class="pricing-plan">
+          <h4>STARTER</h4>
+          <div class="price">
+            <span>$</span>
+            <h3>399</h3>
+          </div>
+          <p class="plan-text">per month. That's just $13 per meal!</p>
+          <ul class="meals-list">
+            <li class="pricing-list-text">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="pricing-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 12.75 6 6 9-13.5"
+                />
+              </svg>
+              <span>1 meal per day</span>
+            </li>
+            <li class="pricing-list-text"">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="pricing-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 12.75 6 6 9-13.5"
+                />
+              </svg>
+
+              <span>Order from 11am to 9pm</span>
+            </li>
+            <li class="pricing-list-text">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="pricing-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 12.75 6 6 9-13.5"
+                />
+              </svg>
+              <span>Delivery is free</span>
+            </li>
+            <li class="pricing-list-text">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="pricing-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 12.75 6 6 9-13.5"
+                />
+              </svg>
+            </li>
+          </ul>
+          <div class="btn-box">
+            <a href="#" class="btn-start orange">Start eatin well</a>
+            
+          </div>
+        </div>
       </div>
     </section>
   </body>
