--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
               <span class="vegetarian-tag meal-tag-text">VEGETARIAN</span>
             </div>
             <p class="meal-title">Japanese Gyozas</p>
-            <ul class="meals-list">
-              <li class="meal-list-text">
+            <ul class="list">
+              <li class="list-text">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -200,7 +200,7 @@
                 </svg>
                 650 calories
               </li>
-              <li class="meal-list-text">
+              <li class="list-text">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -217,7 +217,7 @@
                 </svg>
                 NutriScore ® 74
               </li>
-              <li class="meal-list-text">
+              <li class="list-text">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -249,8 +249,8 @@
               </div>
             </div>
             <p class="meal-title">Avocado Salad</p>
-            <ul class="meals-list">
-              <li class="meal-list-text">
+            <ul class="list">
+              <li class="list-text">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -272,7 +272,7 @@
                 </svg>
                 650 calories
               </li>
-              <li class="meal-list-text">
+              <li class="list-text">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -289,7 +289,7 @@
                 </svg>
                 NutriScore ® 74
               </li>
-              <li class="meal-list-text">
+              <li class="list-text">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -312,8 +312,8 @@
 
         <div class="diets">
           <h3 class="diets-title">Works with any diet:</h3>
-          <ul class="meals-list">
-            <li class="meal-list-text">
+          <ul class="list">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -330,7 +330,7 @@
               </svg>
               <span>Vegetarian</span>
             </li>
-            <li class="meal-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -347,7 +347,7 @@
               </svg>
               <span>Vegan</span>
             </li>
-            <li class="meal-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -364,7 +364,7 @@
               </svg>
               <span>Pescatarian</span>
             </li>
-            <li class="meal-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -381,7 +381,7 @@
               </svg>
               <span>Gluten-free</span>
             </li>
-            <li class="meal-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -398,7 +398,7 @@
               </svg>
               <span>Lactose-free </span>
             </li>
-            <li class="meal-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -415,7 +415,7 @@
               </svg>
               <span>Keto</span>
             </li>
-            <li class="meal-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -432,7 +432,7 @@
               </svg>
               <span>Paleo</span>
             </li>
-            <li class="meal-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -449,7 +449,7 @@
               </svg>
               <span>Low FODMAP</span>
             </li>
-            <li class="meal-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -571,28 +571,27 @@
         </figure>
       </div>
     </section>
-    <section class="pricing">
-      <div class="container">
-        <span class="subheading">PRICING</span>
+    <section class="section-pricing">
+      <div class="pricing-container">
+        <span class="subheading">Pricing</span>
         <h2 class="heading-secondary">Eating well without breaking the bank</h2>
       </div>
-      <div class="price-container">
-        <div class="pricing-plan">
-          <h4>STARTER</h4>
-          <div class="price">
-            <span>$</span>
-            <h3>399</h3>
-          </div>
-          <p class="plan-text">per month. That's just $13 per meal!</p>
-          <ul class="meals-list">
-            <li class="pricing-list-text">
+      <div class="pricing-container pricing-grid">
+        <div class="pricing-plan pricing-plan--starter">
+          <header class="plan-header">
+            <p class="plan-name">Starter</p>
+            <p class="plan-price"><span>$</span>399</p>
+            <p class="plan-text">per month. That's just $13 per meal!</p>
+          </header>
+          <ul class="list">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="pricing-icon"
+                class="meal-icons"
               >
                 <path
                   stroke-linecap="round"
@@ -602,14 +601,14 @@
               </svg>
               <span>1 meal per day</span>
             </li>
-            <li class="pricing-list-text"">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="pricing-icon"
+                class="meal-icons"
               >
                 <path
                   stroke-linecap="round"
@@ -617,17 +616,16 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-
               <span>Order from 11am to 9pm</span>
             </li>
-            <li class="pricing-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="pricing-icon"
+                class="meal-icons"
               >
                 <path
                   stroke-linecap="round"
@@ -637,44 +635,42 @@
               </svg>
               <span>Delivery is free</span>
             </li>
-            <li class="pricing-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="pricing-icon"
+                class="meal-icons"
               >
                 <path
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  d="m4.5 12.75 6 6 9-13.5"
+                  d="M6 18 18 6M6 6l12 12"
                 />
               </svg>
             </li>
           </ul>
-          <div class="btn-box">
-            <a href="#" class="btn-start orange">Start eatin well</a>
-            
+          <div class="plan-sing-up">
+            <a href="#" class="btn-price">Start eatin well</a>
           </div>
         </div>
-        <div class="pricing-plan">
-          <h4>STARTER</h4>
-          <div class="price">
-            <span>$</span>
-            <h3>399</h3>
-          </div>
-          <p class="plan-text">per month. That's just $13 per meal!</p>
-          <ul class="meals-list">
-            <li class="pricing-list-text">
+        <div class="pricing-plan pricing-plan--complete">
+          <header class="plan-header">
+            <p class="plan-name">Complete</p>
+            <p class="plan-price"><span>$</span>649</p>
+            <p class="plan-text">per month. That's just $10 per meal!</p>
+          </header>
+          <ul class="list">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="pricing-icon"
+                class="meal-icons"
               >
                 <path
                   stroke-linecap="round"
@@ -682,16 +678,16 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-              <span>1 meal per day</span>
+              <span><strong>2 meals</strong> per day</span>
             </li>
-            <li class="pricing-list-text"">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="pricing-icon"
+                class="meal-icons"
               >
                 <path
                   stroke-linecap="round"
@@ -699,17 +695,16 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
-
-              <span>Order from 11am to 9pm</span>
+              <span>Order <strong>24/7</strong></span>
             </li>
-            <li class="pricing-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="pricing-icon"
+                class="meal-icons"
               >
                 <path
                   stroke-linecap="round"
@@ -719,14 +714,14 @@
               </svg>
               <span>Delivery is free</span>
             </li>
-            <li class="pricing-list-text">
+            <li class="list-text">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="pricing-icon"
+                class="meal-icons"
               >
                 <path
                   stroke-linecap="round"
@@ -734,14 +729,111 @@
                   d="m4.5 12.75 6 6 9-13.5"
                 />
               </svg>
+              <span>Get access to latest recipes</span>
             </li>
           </ul>
-          <div class="btn-box">
-            <a href="#" class="btn-start orange">Start eatin well</a>
-            
+          <div class="plan-sing-up">
+            <a href="#" class="btn-price">Start eatin well</a>
           </div>
+        </div>
+      </div>
+      <div class="container plan-grid">
+        <aside class="plan-details">
+          Prices include all applicable taxes. You can cancel at any time. Both
+          plans include the following:
+        </aside>
+      </div>
+
+      <div class="container features-grid">
+        <div class="feature">
+          <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+          <p class="feature-title">Never cook again!</p>
+          <p class="feature-text">
+            Our subscriptions cover 365 days per year, even including major
+            holidays.
+          </p>
+        </div>
+        <div class="feature">
+          <ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
+          <p class="feature-title">Local and organic</p>
+          <p class="feature-text">
+            Our cooks only use local, fresh, and organic products to prepare
+            your meals.
+          </p>
+        </div>
+        <div class="feature">
+          <ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
+          <p class="feature-title">No waste</p>
+          <p class="feature-text">
+            All our partners only use reusable containers to package all your
+            meals.
+          </p>
+        </div>
+        <div class="feature">
+          <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
+          <p class="feature-title">Pause anytime</p>
+          <p class="feature-text">
+            Going on vacation? Just pause your subscription, and we refund
+            unused days.
+          </p>
         </div>
       </div>
     </section>
+    <section class="section-cta">
+      <div class="container">
+        <div class="cta-container">
+          <div class="cta-text-box">
+            <h2 class="heading-secondary">Get your first meal for free!</h2>
+            <p class="cta-text">
+              Healthy, tasty and hassle-free meals are waiting for you. Start
+              eating well today. You can cancel or pause anytime. And the first
+              meal is on us!
+            </p>
+
+            <form class="cta-form" action="#">
+              <div>
+                <label for="full-name">Full Name</label>
+                <input
+                  id="full-name"
+                  type="text"
+                  placeholder="John Smith"
+                  required
+                />
+              </div>
+              <div>
+                <label for="email">Email address</label>
+                <input
+                  id="email"
+                  type="email"
+                  placeholder="me@example.com"
+                  required
+                />
+              </div>
+              <div>
+                <label for="select-where">Where did you hear from us?</label>
+                <select name="" id="select-where" required>
+                  <option value="">Please choose one option</option>
+                  <option value="friends">Friends and family</option>
+                  <option value="youtube">Youtube Video</option>
+                  <option value="podcast">Podcast</option>
+                  <option value="facebook">Facebook add</option>
+                  <option value="other">Other</option>
+                </select>
+              </div>
+              <button class="btn">Sign up now</button>
+            </form>
+          </div>
+          <div class="cta-img-box" role="img"></div>
+        </div>
+      </div>
+    </section>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
