adding the last section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     <header class="header">
-      <img src="./img/omnifood-logo.png" class="logo" alt="" />
+      <a href="#">
+        <img src="./img/omnifood-logo.png" class="logo" alt="" />
+      </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">How it works</a></li>
@@ -132,7 +134,7 @@
             diet you follow!
           </p>
         </div>
-        <div class="phone-container">
+        <div class="phone-container container">
           <img id="app--img" src="./img/app/app-screen-1.png" alt="" />
         </div>
         <div class="phone-container">
@@ -474,7 +476,7 @@
       </div>
     </section>
     <section class="section-testimonial">
-      <div class="testimonials-container">
+      <div class="testimonials-container container">
         <span class="subheading">TESTIMONIALS </span>
         <h2 class="heading-secondary">Once you try it, you can't go back</h2>
 
@@ -572,11 +574,11 @@
       </div>
     </section>
     <section class="section-pricing">
-      <div class="pricing-container">
+      <div class="container">
         <span class="subheading">Pricing</span>
         <h2 class="heading-secondary">Eating well without breaking the bank</h2>
       </div>
-      <div class="pricing-container pricing-grid">
+      <div class="container pricing-grid">
         <div class="pricing-plan pricing-plan--starter">
           <header class="plan-header">
             <p class="plan-name">Starter</p>
@@ -827,6 +829,71 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container footer-grid">
+        <div class="logo-col">
+          <a href="#" class="footer-logo">
+            <img src="./img/omnifood-logo.png" class="logo" alt="" />
+          </a>
+          <ul class="social-links">
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
+            </li>
+          </ul>
+          <p class="copyright">
+            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+          </p>
+        </div>
+        <div class="adress-col">
+          <p class="footer-heading">Contact us</p>
+          <address class="contacts">
+            <p class="adress">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
+            <a class="footer-link" href="#">415-201-6370</a>
+            <a class="footer-link" href="#">hello@omnifood.com</a>
+          </address>
+        </div>
+        <nav class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">iOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#">Careers</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
